<resources>
    <string name="app_name">assignment2.201811020.seng40</string>
    <string name="change_clock">Button</string>
    <string name="change_clock1">Change Clock</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="_5_00">5:00</string>
    <string name="start2">Start2</string>
    <string name="start0">Start</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="chess_timer">Chess Timer</string>
</resources>